# Rustic

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  config.toml.example  example_config.toml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: workflow.yml
migrations/: 20211016055959_rustic.sql  20211017053519_rustic.sql
src/: main.rs  settings.rs
src/commands/: config.rs  fun.rs  image.rs  misc.rs  mod.rs
