[package]
name       = "rustic"
version    = "0.1.1"
edition    = "2018" # TODO: Update to 2021 editon when it's released in Oct.
publish    = false
license    = "AGPL-3.0-or-later"
authors    = ["MrArkon <mrarkon@outlook.com>"]
repository = "https://github.com/MrArkon/Rustic"

[dependencies]
once_cell         = "1.8.0"
pretty_env_logger = "0.4.0"
rand              = "0.8.4"
serenity          = "0.10.9"
toml              = "0.5.8"
typemap           = "0.3.3"

[dependencies.log]
version  = "0.4.14"
features = ["std", "serde"]

[dependencies.reqwest]
version  = "0.11.5"
features = ["json"]

[dependencies.serde]
version  = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version  = "1.11.0"
features = ["full"]