[package]
name       = "rustic"
version    = "0.2.0"
edition    = "2021"
publish    = false
license    = "AGPL-3.0-or-later"
authors    = ["MrArkon <mrarkon@outlook.com>"]
repository = "https://github.com/MrArkon/Rustic"

[dependencies]
once_cell            = "1.8.0"
pretty_env_logger    = "0.4.0"
rand                 = "0.8.4"
serenity             = "0.10.9"
simple-process-stats = "1.0.0"
toml                 = "0.5.8"
typemap              = "0.3.3"

[dependencies.log]
version  = "0.4.14"
features = ["std", "serde"]

[dependencies.reqwest]
version  = "0.11.6"
features = ["json"]

[dependencies.serde]
version  = "1.0.130"
features = ["derive"]

[dependencies.sqlx]
version  = "0.5.9"
features = ["runtime-tokio-rustls", "postgres", "offline", "macros"]

[dependencies.tokio]
version  = "1.13.0"
features = ["full"]